# ttc

./: .gitignore  README.md  guix.scm  main.py  pyproject.toml  shell.nix  special_verbs_ru-RU.txt  tests.py  ttc.py  ttc_exact.py
.github/workflows/: coverage.yml  pages.yml  python-build.yml  python-package.yml
language/: replica.py  span.py
language/russian/: exact.py  regular.py  tests.py
language/russian/common/: constants.py  natasha_span.py  token_checks.py
language/universal/: exact.py
mypy_plugins/: spacy_extension_attribute.py
tests/: test_text_helpers.py
tests/russian/: test_actor_classification.py  test_dialogue_extraction.py  test_speaker_classification.py  test_ttc.py
tests/russian/docs/: syntax.md
tests/russian/scratches/: data.ipynb  dataset-example.txt  noun_chunks_comparison.ipynb  noun_chunks_dev.ipynb  onomatopeia.ipynb  spacy_sandbox.ipynb  test.ipynb  voina-i-mir-2.txt
tests/russian/texts/: chiklin-1.txt  chiklin-2.txt  grisha.txt  gusev.txt  mamleev-schastie-grisha.txt  platonov-kotlovan-girl.txt  platonov-kotlovan-prushevskiy.txt  sanderson-kaladin.txt  sanderson-wayofkings-foreword.txt  sanderson-wayofkings-kaladin-lirin.txt  sanderson-wayofkings-kaladin.txt  sanderson-wayofkings-shallan-tozbek.txt  sanderson-wayofkings-sylphrena.txt  sanderson-wayofkings-szeth-and-robbers.txt  sanderson-wayofkings-szeth-and-tuk.txt  sanderson-wordsofradiance-iasna-gavilar.txt  shuhov.txt  solzhenitsyn-ivandenisovich-dekret.txt  sorokin-norma-gusev.txt  szeth-robbers.txt  szeth-tuk-1.txt  test.ipynb  tolstoy-voina-i-mir-piere-and-andrey.txt  tolstoy-voina-i-mir-sonya.txt  voina-i-mir-1.txt  voina-i-mir-2.txt
tests/russian/texts/17-07-2023/: sndrsn-wor-shallan-1.txt  sndrsn-wor-shallan-2.txt  sndrsn-wor-shallan-3.txt  sndrsn-wor-shallan-4.txt  sndrsn-wor-shallan-5.txt  sndrsn-wor-shallan-6.txt  sndrsn-wor-shallan-7.txt
ttc/: __init__.py  cli.py  iterables.py
ttc/language/: __init__.py  conversation_classifier.py  deps.py  dialogue.py  lang_typing.py  morphs.py  play.py  replica.py  speaker.py  types.py
ttc/language/common/: constants.py  span_extensions.py  token_extensions.py
ttc/language/russian/: __init__.py  constants.py  conversation_classifier.py  dependency_patterns.py  patterns.py  pipelines.py  regular.py  russian_conversation_classifier.py  span_extensions.py  syntax.md  syntax.rst  token_checks.py  token_extensions.py  token_patterns.py
ttc/language/russian/extensions/: syntax_iterators.py
ttc/language/russian/pipelines/: __init__.py  actor_classifier.py  line_numerator.py  mispredictions_corrector.py  replicizer.py  sentencizer.py  speaker_classifier.py
