[tool.poetry]
name = "ttc"
version = "0.1.0"
description = "A Text-To-Conversation Natural Language Processing toolkit."
authors = ["Ilya I. Nikitin <ilya.i.nikitin@proton.me>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/f1uctus/ttc"

[tool.poetry.dependencies]
# required
python = ">=3.8,<3.13"
click = ">=8.0.0"
numpy = ">=1.24.0"
spacy = ">=3.5.0"
ru_core_news_sm = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.5.0/ru_core_news_sm-3.5.0.tar.gz" }

# ... models
ru_core_news_md = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.5.0/ru_core_news_md-3.5.0.tar.gz", optional = true }
ru_core_news_lg = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_lg-3.5.0/ru_core_news_lg-3.5.0.tar.gz", optional = true }

# ... development
pytest = { version = ">=7.2.1", optional = true }
jupyter = { version = ">=1.0.0", optional = true }
mypy = { version = ">=1.0", optional = true }
black = { version = ">=23.1", optional = true }

[tool.poetry.extras]
large_models_ru = ["ru_core_news_md", "ru_core_news_lg"]
dev = ["pytest", "mypy", "jupyter", "black"]

[tool.poetry.scripts]
ttc = "ttc:cli.cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
implicit_reexport = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
  )
)
'''
